objects/DMAPP__Dealmaker_Political_Map_Settings2__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This setting controls which attributes are switched on and off on the Political Map.</description>
    <fields>
        <fullName>DMAPP__Disable_Contact_Creation_On_PoliticalMap__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the Status Attribute will not be shown</description>
        <label>Disable Political Map Contact Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Hide_Adaptability__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the Adaptability Attribute will not be shown</description>
        <inlineHelpText>If checked the Adaptability Attribute will not be shown</inlineHelpText>
        <label>Hide Adaptability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Hide_Contact_Profile_Photo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Contact Profile Photo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Hide_Coverage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the Coverage Attribute will not be shown</description>
        <inlineHelpText>If checked the Coverage Attribute will not be shown</inlineHelpText>
        <label>Hide Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Hide_Decision_Orientation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the Decision Orientation Attribute will not be shown</description>
        <inlineHelpText>If checked the Decision Orientation Attribute will not be shown</inlineHelpText>
        <label>Hide Decision Orientation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Hide_Political_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the Political Status Attribute will not be shown</description>
        <inlineHelpText>If checked the Political Status Attribute will not be shown</inlineHelpText>
        <label>Hide Political Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Hide_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the Status Attribute will not be shown</description>
        <inlineHelpText>If checked the Status Attribute will not be shown</inlineHelpText>
        <label>Hide Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Hide_Tasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__LinkedIn_Handle_Field__c</fullName>
        <description>Use this field to specify a field for including a Linkedin profile for a contact.</description>
        <inlineHelpText>Use this field to specify a field for including a Linkedin profile for a contact.</inlineHelpText>
        <label>LinkedIn Handle Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Skin__c</fullName>
        <description>Use this field to specify the name of the skin which will define the glyphs and icons used by Political Map.</description>
        <inlineHelpText>Use this field to specify the name of the skin which will define the glyphs and icons used by Political Map.</inlineHelpText>
        <label>Skin</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Twitter_Handle_Field__c</fullName>
        <description>Use this field to specify a field for including a Twitter profile for a contact.</description>
        <inlineHelpText>Use this field to specify a field for including a Twitter profile for a contact.</inlineHelpText>
        <label>Twitter Handle Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Dealmaker Political Map Settings</label>
</CustomObject>